# pinoc

./: .gitignore  .release.toml  CHANGELOG.md  Cargo.toml  README.md  check-changelog.sh
src/: content.rs  main.rs
src/commands/: build.rs  deploy.rs  mod.rs  test.rs
src/templates/: instructions.rs  minimal.rs  mod.rs  states.rs  unit_tests.rs
templates/basic/: Cargo.toml.tmpl  README.md.tmpl  entrypoint.rs.tmpl  errors.rs.tmpl  lib.rs.tmpl
templates/basic/instructions/: initialize.rs.tmpl  mod.rs.tmpl
templates/basic/states/: state.rs.tmpl  util.rs.tmpl
templates/basic/tests/: unit_test.rs.tmpl
