[package]
name = "pinoc"
version = "0.1.2"
edition = "2021"
authors = ["Ayush <ayush.agr254@gmail.com>", "Arjun <arjunmundamani@gmail.com>"]
description = "A CLI tool for setting up pinocchio program project"
repository = "https://github.com/a91y/pinoc"
license = "MIT"
readme = "README.md"
keywords = ["cli", "scaffold", "template", "solana", "pinocchio"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "pinoc"
path = "src/main.rs"
